--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,16 @@
     <string name="app_name">GlassWorkDeviceInfo</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-
+	<string name="retriving_log">Please wait....retriving logcat</string>
+	<string name="select_app">"Please select app for sending locat to</string>
+	<string name="retriving_log_fail">"FAIL!! Unable to retrive logcat"</string>
+	<string name="email_subject">Logcat attached</string>
+	<!--  <string name="device_info_fmt">
+Log Collector version: <xliff:g id="application_version">%s</xliff:g>\n
+Device model: <xliff:g id="device_model">%s</xliff:g>\n
+Firmware version: <xliff:g id="firmware_revision">%s</xliff:g>\n
+Kernel version: <xliff:g id="kernel_version">%s</xliff:g>\n
+Build number: <xliff:g id="build_number">%s</xliff:g>\n
+    </string> --> 
+    
 </resources>
