4/13/2014 fixed app list when clicks to display app details

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,15 +7,16 @@
 	<string name="retriving_log">Please wait....retriving logcat</string>
 	<string name="select_app">"Please select app for sending locat to</string>
 	<string name="retriving_log_fail">"FAIL!! Unable to retrive logcat"</string>
+	<string name="title_activity_apk_list">Installed Applcaition list</string>
 	<string name="email_subject">Logcat attached</string>
-	<string name="appicon">Application Icon</string>
+	<string name="appicon">Application Icon:</string>
     <string name="apkname">Application Name:</string>
     <string name="package_name">Package Name:</string>
-    <string name="version">Version:</string>
+    <string name="version">Application Version:</string>
     <string name="features">Required Features:</string>
     <string name="permissions">Required Permissions:</string>
-    <string name="req_version">Taget SDK Version:</string>
-    <string name="path_info">Path Info:</string>
+    <string name="req_version">Taget Android SDK Version:</string>
+    <string name="path_info">Application Path:</string>
     <string name="appsize">Physical Size</string>
     <string name="installed">Installed:</string>
     <string name="modified">Last Modified:</string>
